# rust-sdk

./: Cargo.toml  Makefile  README.md
.github/workflows/: benches.yml  rust-sdk-tests.yml
crates/redstone/: Cargo.toml  README.md
crates/redstone-testing/: Cargo.toml
crates/redstone-testing/src/: env.rs  package_signers.rs  primary_signers_scenarios.rs  scenario.rs
crates/redstone-testing/src/sample/: BTC_PRIMARY_5sig_newer.hex  mod.rs
crates/redstone-utils/: Cargo.toml
crates/redstone-utils/src/: hex.rs  iter_into.rs  lib.rs
crates/redstone/benches/: bench_main.rs  benchmarks.rs
crates/redstone/benches/benchmarks/: mod.rs  payload_decoding.rs  payload_processing.rs
crates/redstone/src/: lib.rs  verification.rs
crates/redstone/src/casper/: mod.rs
crates/redstone/src/contract/: mod.rs  verification.rs
crates/redstone/src/core/: aggregator.rs  config.rs  matrix.rs  mod.rs  processor.rs  processor_result.rs  test_helpers.rs  validator.rs
crates/redstone/src/crypto/: mod.rs
crates/redstone/src/default_ext/: mod.rs
crates/redstone/src/helpers/: hex.rs  iter_into.rs  mod.rs  slice.rs  trie.rs
crates/redstone/src/network/: as_str.rs  error.rs  mod.rs
crates/redstone/src/protocol/: constants.rs  data_package.rs  data_point.rs  marker.rs  mod.rs  payload.rs  payload_decoder.rs
crates/redstone/src/radix/: mod.rs  value_ext.rs
crates/redstone/src/solana/: mod.rs
crates/redstone/src/soroban/: helpers.rs  mod.rs
crates/redstone/src/types/: bytes.rs  feed_id.rs  mod.rs  signer_address.rs  timestamp_millis.rs  value.rs  value_testing.rs  xxx.md
crates/redstone/src/u256/: alloy.rs  mod.rs  primitive_types.rs
crates/redstone/src/utils/: back_reader.rs  back_reader_unsafe.rs  decode_utils.rs  filter.rs  median.rs  mod.rs  reverse_reader.rs  slice.rs  trim.rs  trim_zeros.rs
crates/redstone_testing/: Cargo.toml
crates/redstone_testing/src/: env.rs  lib.rs  primary_signers_scenarios.rs  scenario.rs  signer.rs
crates/redstone_testing/src/env/: mod.rs  run_env.rs
crates/redstone_testing/src/sample/: BTC_PRIMARY_5sig.hex  ETH_BTC_PRIMARY_3sig.hex  ETH_BTC_PRIMARY_3sig_newer.hex  mod.rs  sample_test_helpers.rs
crates/samples/: Cargo.toml
crates/samples/src/: lib.rs
src/: lib.rs  types.rs
src/casper/: mod.rs
src/core/: aggregator.rs  config.rs  mod.rs  processor.rs  processor_result.rs  test_helpers.rs  validator.rs
src/crypto/: default_crypto.rs  keccak256.rs  mod.rs  recover.rs
src/default_ext/: mod.rs
src/helpers/: hex.rs  iter_into.rs
src/network/: as_str.rs  assert.rs  error.rs  from_bytes_repr.rs  mod.rs  print_debug.rs  specific.rs
src/network/casper/: from_bytes_repr.rs
src/network/radix/: from_bytes_repr.rs  mod.rs  u256_ext.rs
src/network/std/: from_bytes_repr.rs
src/protocol/: data_package.rs  data_point.rs  marker.rs  mod.rs  payload.rs  payload_decoder.rs
src/radix/: mod.rs
src/solana/: mod.rs
src/types/: bytes.rs  feed_id.rs  mod.rs  signer_address.rs  timestamp_millis.rs  value.rs
src/utils/: filter.rs  median.rs  trim.rs  trim_zeros.rs
test_data/: payload_500_datapoints.hex  payload_50_datapoints.hex
